Jeu_de_tests/error/redefinition_global_global.tpc
/* var globale - var globale */

int r1, r1;

int main(void){return 0;}
